# news-letter

./: Cargo.toml  configuration.yaml
migrations/: 20241210082619_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
