[package]
name = "news-letter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "news-letter"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.9"
serde = { version = "1.0.200", features = ["derive"] }