[package]
name = "news-letter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "news-letter"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.9"
serde = { version = "1.0.200", features = ["derive"] }
config = "0.15.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
env_logger = "0.11.5"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"]
